[package]
name = "adam_os"
version = "0.1.0"
edition = "2021"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.23", features = ["binary"]}


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
